--- a/metadata.yaml
+++ b/metadata.yaml
@@ -27,5 +27,6 @@ subjects:
 - !lcsh 'Toronto (Ont.) -- Fiction'
 - !lcc 'PS'
 - !lcsh 'Science fiction'
+- GITenberg
 title: Someone Comes to Town, Someone Leaves Town
 url: http://www.gutenberg.org/ebooks/18224
